<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="module_name">Immersed Statusbar for Miui6</string>
    <string name="module_desc">Immersed Statusbar for Miui6</string>
    <string name="module_desc_full">Immersed Statusbar for Miui6\nAuthor: kqstone (kqstone@163.com)\nAcknowledgment: Great thanks to MohammadAG (https://github.com/MohammadAG/Xposed-Tinted-Status-Bar) for lots of sources.</string>
    
    <string name="begin_download_profiles">Begin to download profiles from interent, please wait!</string>
    <string name="begin_download_profiles_summary">Begin to download profiles at background, please wait for a moment!</string>
    <string name="success">Profiles download success</string>
    <string name="fail">Profiles download Failed</string>
    <string name="title_waring_debug">In debug mode</string>
    <string name="message_waring_debug">Normal user isn\'t suggested to use debug mode, as it may cause some problems. \nClose the debug mode?</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    
    <!--settings  -->
    <string name="title_settings">Settings</string>
    <string name="title_app_settings">Application Settings</string>
    <string name="title_force_tint">Force Tint StatusBar</string>
    <string name="summary_force_tint">Force tint statusbar for app without single or gradual uppart</string>
    <string name="title_tint_notification">Tint Notification Icons</string>
    <string name="summary_tint_notification">Flat and tint Notification Icons to adapt statusbar background.</string>
    <string name="title_quickanim_content">Quick Animate Statusbar Content</string>
    <string name="summary_quickanim_content">Fast the statusbar content animation when darkmode change</string>
    <string name="debug">Debug</string>
    <string name="title_export_inform">Export activity information</string>
    <string name="summary_export_inform">Export package and activity information for profile generation</string>    
    <string name="title_export_inform_tofile">Export informmation to sdcard</string>
    <string name="summary_export_inform_tofile">Export activity informmation and cache drawable to sdcard</string>
    <string name="activity_presets">Activity配置</string>
    <string name="title_profile">Profiles</string>
    <string name="summary_profile_download">Download Profiles From Internet</string>
    <string name="show_debug_settings">Show debug settings</string>
    <string name="hide_debug_settings">Hide debug settings</string>
    <string name="summary_filter_alpha">Current alpha: </string>
    <string name="title_filter_alpha">Filter color alpha</string>
    <string name="title_get_usr_color">Get user color after click statusbar</string>
    <string name="summary_title_get_usr_color">get and store user color by click right part of statusbar, and clear it by click left part of statusbar</string>
    <string name="toast_prefix_get_usr_color">Get user color: </string>
    <string name="toast_get_usr_color_fail">Failed to get user color!</string>
    <string name="toast_get_usr_color_unnecessary">Color got is same as previous, unnecessary to store</string>
    <string name="toast_cancel_usr_color">Clear customized user color </string>
    <string name="toast_cancel_usr_color_unnecessary">Unnecessary to clean user color!</string>
    <string name="toast_cancel_usr_color_in_set">You have set User color before, it has been clear, re-click the right part of statusbar to set</string>
    <string name="text_title_get_user_color_mode">On get user color mode</string>
    <string name="text_content_get_user_color_mode">Suggest to turn of on daily use</string>
    
    
    <!--about  -->
    <string name="about">About</string>
    <string name="about_version">App Version: v%1$s</string>
    <string name="about_app">About Immersed Statusbar for MIUI6</string>
    <string name="author_inform">Author:</string>
    <string name="author_content">kqstone (kqstone@163.com)</string>
    <string name="acknow_inform">Acknowledgment:</string>
    <string name="acknow_content">Great thanks to MohammadAG for lots of sources. \n(https://github.com/MohammadAG/Xposed-Tinted-Status-Bar) </string>
    <string name="about_profile">About Profile</string>
    <string name="about_profile_content">Profile is xml files that makes ISB more suitable for certain apps, you can download from ISB settings interface. \nMost profiles are made by watcgfw. \nhttps://github.com/watcgfw/ISBpreferences</string>
    <string name="title_tint_statusbar">Tint Statusbar for 3rd App</string>
    <string name="summary_tint_statusbar">Tint statusbar background for 3rd apps to get immersed effect</string>
    
    
</resources>
